# rust-developer-bootcamp

./: README.md  format_all.py  run.py
client/: Cargo.toml
client/src/: app.rs  constants.rs  main.rs  utils.rs
lecture-13-21_11/: Cargo.toml
lecture-13-21_11/src/: a_simple_error.rs  b_borrowed_error.rs  c_handling_different_errors_without_conversions.rs  d_downcasting_errors.rs  e_anyhow.rs  f_thiserror.rs  g_anyhow_personal.rs  h_thiserror_personal.rs  main.rs
lecture_01-03_10/: Cargo.toml
lecture_01-03_10/src/: main.rs
lecture_02-05_10/: Cargo.toml
lecture_02-05_10/src/: _personal.rs  main.rs
lecture_05-17_10/: Cargo.toml
lecture_05-17_10/src/: _personal.rs  csv_processing.rs  custom_errors.rs  helpers.rs  main.rs
lecture_07-24_10/: Cargo.toml
lecture_07-24_10/src/: _personal.rs  commands.rs  csv_processing.rs  custom_errors.rs  extensions.rs  main.rs  spawn_thread.rs
lecture_09-31_10/: Cargo.toml  README.md  test.txt
lecture_09-31_10/src/: client.rs  client_helpers.rs  config.rs  env_args.rs  example_networking.rs  example_serde.rs  fs_ops.rs  helpers.rs  main.rs  message.rs  server.rs  server_helpers.rs
lecture_11-07_11/: README.md  run.py
server/: Cargo.toml
server/src/: app.rs  main.rs
shared/: Cargo.toml
shared/src/: constants.rs  env_args.rs  errors.rs  lib.rs  logging.rs  message.rs  utils.rs
