[package]
name = "lecture_09-31_10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["cargo"] }
image = "0.24.7"
serde = { version = "1.0.190", features = ["derive"] }
serde_cbor = "0.11.2"
